# mvp-main

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json
checkin-voice/sama-voice-agentcode/local-voice-ai-agent/: .dockerignore  .gitignore  Dockerfile  api_server.py  dependencies.py  local_voice_chat.py  local_voice_chat_advanced.py  logging_config.py  pyproject.toml  test_health.py  test_logging.py  verify_health_requirements.py  voice_Chat_Assembly-STT.py
sama-wellness-backend-main/: .dockerignore  .gitattributes  .gitignore  .railwayignore  Dockerfile  README.md  pyproject.toml  requirements-production.txt  requirements.txt  run.sh  sama_wellness.db  sama_wellness_dev.db  sama_wellness_phase1.db  schema.sql  test_daily-checking-chat.docx  test_database_setup.py  verify_setup.py
sama-wellness-backend-main/app/: __init__.py  config.py  main.py
sama-wellness-backend-main/app/api/: __init__.py  daily_checkin.py  llm.py  onboarding.py
sama-wellness-backend-main/app/database/: connection.py
sama-wellness-backend-main/app/middleware/: error_handler.py
sama-wellness-backend-main/app/models/: __init__.py  api_usage_metrics.py  app_configuration.py  ayurveda_knowledge.py  chat_message.py  conversation_session.py  dosha_assessment.py  dosha_tracking.py  dosha_types.py  emotion_analysis.py  error_logs.py  helpline_referrals.py  knowledge_tags.py  push_subscriptions.py  user.py  (+8 more)
sama-wellness-backend-main/migrations/: 001_update_schema.sql  002_rename_user_progress_daily_to_checkin_sessions.sql  003_rename_progress_id_to_session_id.sql
(+279 files in other folders)
